fixed links spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ a{
     flex: 2;
     margin: 30px auto;
     width: 60%;
-    min-width: 450px;
+    min-width: 350px;
     min-height: 100px;
     display: flex;
     justify-content: space-around;
